# census-dictionary

./: LICENSE  README.md  census-dict-2021.json
project/: exceptions.json  load_variables.py  pyproject.toml
project/snowflakes/: CDCF.json  CDCUF.json  CDSF.json  CNDCF.json  FIDF_HIDD.json  STRD.json
