[tool.poetry]
name = "census-dict-2021"
version = "0.1.0"
description = ""
authors = ["Tim Ayre <timayre@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
